Added basics of the navigation bar.

--- a/ProjectFiles/react_files/src/App.scss
+++ b/ProjectFiles/react_files/src/App.scss
@@ -1,4 +1,7 @@
 //Redefining bootstrap variables.
 $primary: #ffb7c5;
 
+$navbar-dark-color: #ffffff;
+$navbar-dark-hover-color: #ff5e7e;
+
 @import '~bootstrap/scss/bootstrap';
