--- a/ProjectFiles/react_files/src/App.css
+++ b/ProjectFiles/react_files/src/App.css
@@ -20,6 +20,15 @@ h1 {
 }
 
 /* Navigation bar (Middle of page)*/
-.absoluteNav {
+.absoluteNavContainer {
   position: absolute;
+  width: 100%;
+  height: 100%;
+}
+.absoluteNavCenter {
+  margin-top: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
