--- a/ProjectFiles/react_files/src/App.scss
+++ b/ProjectFiles/react_files/src/App.scss
@@ -1,7 +1,7 @@
 //Redefining bootstrap variables.
-$primary: #ffb7c5;
 
-$navbar-dark-color: #ffffff;
-$navbar-dark-hover-color: #ff5e7e;
+$navbar-dark-color: #777777;
+$navbar-dark-hover-color: #ff3b3f;
+
 
 @import '~bootstrap/scss/bootstrap';
