--- a/ProjectFiles/react_files/src/App.scss
+++ b/ProjectFiles/react_files/src/App.scss
@@ -1,7 +1,7 @@
 //Redefining bootstrap variables.
 
-$navbar-dark-color: #777777;
-$navbar-dark-hover-color: #ff3b3f;
+$navbar-dark-color: #ffffff;
+$navbar-dark-hover-color: #000000;
 
 $input-btn-focus-width: .1rem !default;
 $input-btn-focus-color: #ff3b3f;
