--- a/ProjectFiles/react_files/src/App.scss
+++ b/ProjectFiles/react_files/src/App.scss
@@ -1,10 +1,10 @@
 //Redefining bootstrap variables.
 
-$navbar-dark-color: #ffffff;
-$navbar-dark-hover-color: #ff3b3f;
+$navbar-dark-color: #000;
+$navbar-dark-hover-color: #4dbd62;
 
 $input-btn-focus-width: .1rem !default;
-$input-btn-focus-color: #ff3b3f;
+$input-btn-focus-color: #4dbd62;
 $input-btn-focus-box-shadow:  0 0 0 $input-btn-focus-width $input-btn-focus-color !default;
 
 @import '~bootstrap/scss/bootstrap';
