--- a/ProjectFiles/react_files/src/App.css
+++ b/ProjectFiles/react_files/src/App.css
@@ -8,6 +8,29 @@
   padding: 35px;
   font-size: 100px;
   display: inline-block;
+  margin: 0;
+}
+.descText {
+  font-weight: 400;
+  font-size: 1.5em;
+}
+.footerText {
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 300;
+  font-size: 18px;
+  color: #5eeb78;
+}
+.footerLink {
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 300;
+  font-size: 15px;
+  color: #fff;
+}
+.footerLink:hover {
+  color: #5eeb78;
+}
+a:active, a:visited {
+  color: #fff;
 }
 
 /* Word below icon */
