--- a/ProjectFiles/react_files/src/App.css
+++ b/ProjectFiles/react_files/src/App.css
@@ -10,6 +10,10 @@
   display: inline-block;
   margin: 0;
 }
+.Title2 {
+  font-weight: 500;
+  font-size: 50px;
+}
 .descText {
   font-weight: 400;
   font-size: 1.5em;
