--- a/ProjectFiles/react_files/src/App.css
+++ b/ProjectFiles/react_files/src/App.css
@@ -57,8 +57,8 @@ a:active, a:visited {
   color: #ffffff;
 }
 .divBlockWithContentSecondary {
-  background-color: #ffffff;
-  color: #5eeb78;
+  background-color: #6daffe;
+  color: #ffffff;
 }
 
 
