--- a/ProjectFiles/react_files/src/App.css
+++ b/ProjectFiles/react_files/src/App.css
@@ -14,6 +14,7 @@
   font-weight: 500;
   font-size: 50px;
 }
+
 .descText {
   font-weight: 400;
   font-size: 1.5em;
@@ -35,6 +36,15 @@
 }
 a:active, a:visited {
   color: #fff;
+}
+/* Smaller Titles */
+@media only screen and (max-width: 1500px) {
+  .Title {
+    font-size: 5em;
+  }
+  .descText {
+    font-size: 1.35em;
+  }
 }
 
 /* Word below icon */
