Created account board page, updated breakpoints.

--- a/ProjectFiles/react_files/src/App.css
+++ b/ProjectFiles/react_files/src/App.css
@@ -70,7 +70,10 @@ a:active, a:visited {
   background-color: #6daffe;
   color: #ffffff;
 }
-
+.divBlockWithContentTertiary {
+  background-color: #ffffff;
+  color: #5eeb78;
+}
 
 .medButtonText {
   font-weight: 700;
