Questionnaire css rework.

--- a/ProjectFiles/react_files/src/App.scss
+++ b/ProjectFiles/react_files/src/App.scss
@@ -104,22 +104,22 @@ a:active, a:visited {
 }
 .divBlockWithContentTertiary {
   background-color: #eeeeee;
-  color: #5eeb78;
+  color: #000000;
 }
 
 .centerCard {
   background-color: #fff;
   padding: 100px 50px;
-  color: #4dbd62;
+  color: #000;
   box-shadow: 0 1px 4px #b3b3b3;
-  font-size: 0.875rem;
+  font-size: 1rem;
 }
 .centerCardCompact {
   background-color: #fff;
   padding: 50px 25px;
-  color: #4dbd62;
+  color: #000;
   box-shadow: 0 1px 4px #b3b3b3;
-  font-size: 0.875rem;
+  font-size: 1rem;
 }
 
 .smButtonText {
