--- a/ProjectFiles/react_files/src/App.scss
+++ b/ProjectFiles/react_files/src/App.scss
@@ -89,6 +89,11 @@ a:active, a:visited {
   font-size: 2.75em;
   margin-bottom: 0;
 }
+.iconDescSmall {
+  color: #73737e;
+  font-weight: 300;
+  font-size: 1.175em;
+}
 .iconDesc2 {
   color: #fff;
   font-weight: 300;
