--- a/ProjectFiles/react_files/src/App.scss
+++ b/ProjectFiles/react_files/src/App.scss
@@ -14,8 +14,8 @@ $input-btn-focus-box-shadow: 0 0 0 $input-btn-focus-width $input-btn-focus-color
 $grid-breakpoints: (
     xs: 0,
     sm: 576px,
-    md: 768px,
-    lg: 1100px,
+    md: 775px,
+    lg: 1200px,
     xl: 1800px,
 );
 
@@ -47,6 +47,31 @@ $container-max-widths: (
     font-weight: 500;
     font-size: 65px;
     color: #5ad370;
+}
+/* Smaller Titles */
+@media only screen and (max-width: 930px) {
+    .Title {
+        font-size: 4em;
+    }
+    .descText {
+        font-size: 1.1rem;
+    }
+}
+@media only screen and (max-width: 775px) {
+    .Title {
+        font-size: 5em;
+    }
+    .descText {
+        font-size: 1.25rem;
+    }
+}
+@media only screen and (max-width: 500px) {
+    .Title {
+        font-size: 3.525em;
+    }
+    .descText {
+        font-size: 1rem;
+    }
 }
 
 .backTitleImage {
@@ -95,12 +120,6 @@ $container-max-widths: (
 a:active,
 a:visited {
     color: #fff;
-}
-/* Smaller Titles */
-@media only screen and (max-width: 1500px) {
-    .Title {
-        font-size: 5em;
-    }
 }
 
 /* Word below icon */
