--- a/ProjectFiles/react_files/src/App.scss
+++ b/ProjectFiles/react_files/src/App.scss
@@ -192,6 +192,10 @@ h6 {
     font-size: 18px;
     color: #5eeb78;
 }
+.smallInfoText {
+    font-size: 0.9rem;
+    font-weight: 400;
+}
 .footerLink {
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 300;
