--- a/ProjectFiles/react_files/src/App.scss
+++ b/ProjectFiles/react_files/src/App.scss
@@ -369,3 +369,21 @@ a:visited {
 .toast-header {
     padding: 7.5px 0;
 }
+
+/* Sidebar for learn page */
+.sidebar {
+    background-color: #ffffff;
+    position: sticky;
+    top: 0;
+    height: 100vh;
+    z-index: 100;
+    padding: 0;
+    border-top: solid 1px #9e9e9e;
+}
+@media only screen and (max-width: 575px) {
+    .sidebar {
+        position: relative;
+        top: 0;
+        height: auto;
+    }
+}
